# Data-Training

.github/workflows/: python_test.yml
mle-intv-main/: README.md
mle-intv-main/Application/: Dockerfile  model_cars.py  trained_model.joblib
mle-intv-main/Application/AWS/: Dockerfile  model_cars_AWS.py
mle-intv-main/Application/Local/: Dockerfile  model_cars.py
mle-intv-main/config/: config.json
mle-intv-main/main_Train/: pyproject.toml  train_model.py  train_model_version.py  unit_test.py
mle-intv-main/main_Train/config/: config.json  requirements.txt
mle-intv-main/main_Train/notebooks/: Model_Training.ipynb  estudioDatos.mlx  estudioDatos_V2.m
mle-intv-main/notebooks/: Model_Training.ipynb
