[tool.poetry]
name = "main-train"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "1.3.1"
pandas = "1.5.3"
joblib = "^1.4.2"
matplotlib = "<3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
